--- a/txtvisualizer.ipynb
+++ b/txtvisualizer.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### <font color=green>Author: Berke Can Rizai</font>\n",
+    "## <font color=blue>Author: Berke Can Rizai</font>\n",
+    "***\n"
    ]
   },
   {
