--- a/txtvisualizer.ipynb
+++ b/txtvisualizer.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <font color=blue>Author: Berke Can Rizai</font>\n",
+    "## Author: Berke Can Rizai\n",
     "***\n"
    ]
   },
@@ -12,7 +12,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### <font color=green>This project takes any txt file, no matter how long it may be and visualizes the most frequent words, except common ones like he, she, the etc. and outputs a image.</font>"
+    "#### >This project takes any txt file, no matter how long it may be and visualizes the most frequent words, except common ones like he, she, the etc. and outputs a image."
    ]
   },
   {
